--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,7 +115,7 @@ dev = [
     "bandit==1.7.5",
     "alembic==1.12.1",
     "ipdb==0.13.13",
-    "pdb++==0.10.3",
+    "pdbpp==0.10.3",
     "py-spy==0.3.14",
     "memory-profiler==0.61.0",
     "jupyter==1.0.0",
