--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Core Framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.6.0
-pydantic-settings==2.2.0
+fastapi==0.124.0
+uvicorn==0.38.0
+pydantic==2.12.4
+pydantic-settings==2.12.0
 
 # Database
 sqlalchemy[asyncio]==2.0.25
