--- a/.env.example
+++ b/.env.example
@@ -82,9 +82,10 @@ JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 # =============================================================================
 # ШИФРОВАНИЕ
 # =============================================================================
-# Ключ для шифрования эмбеддингов и чувствительных данных
+# Ключ для шифрования эмбеддингов и чувствительных данных (Fernet)
+# Fernet автоматически генерирует соли и обеспечивает уникальность шифротекстов
 ENCRYPTION_KEY=your-256-bit-encryption-key-for-embeddings-and-sensitive-data
-ENCRYPTION_ALGORITHM=AES-256-GCM
+ENCRYPTION_ALGORITHM=fernet
 
 # =============================================================================
 # RATE LIMITING
@@ -227,10 +228,22 @@ TEST_REDIS_URL=redis://localhost:6380/1
 # 6. Проверьте настройки безопасности (CORS, rate limiting, etc.)
 
 # =============================================================================
+# ГЕНЕРАЦИЯ КЛЮЧЕЙ (добавь эти примеры)
+# =============================================================================
+# Генерация JWT_SECRET_KEY:
+# python3 -c "import secrets; print(secrets.token_urlsafe(32))"
+# Генерация ENCRYPTION_KEY для Fernet:
+# python3 -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+# Генерация случайного пароля:
+# python3 -c "import secrets; print(secrets.token_urlsafe(24))"
+# Проверка текущих ключей:
+# python3 -c "from app.config import settings; print('JWT:', len(settings.JWT_SECRET_KEY)); print('ENC:', len(settings.ENCRYPTION_KEY))"
+
+# =============================================================================
 # ГЕНЕРАЦИЯ СЕКРЕТНЫХ КЛЮЧЕЙ (bash команды)
 # =============================================================================
 # JWT_SECRET_KEY: openssl rand -hex 32
-# ENCRYPTION_KEY: openssl rand -base64 32
+# ENCRYPTION_KEY: openssl rand -base64 32  # Для Fernet (32 байта в base64)
 # DB_PASSWORD: openssl rand -base64 24
 
 # =============================================================================
@@ -238,6 +251,6 @@ TEST_REDIS_URL=redis://localhost:6380/1
 # =============================================================================
 # REQUIRED: DATABASE_URL
 # REQUIRED: JWT_SECRET_KEY
-# REQUIRED: ENCRYPTION_KEY
+# REQUIRED: ENCRYPTION_KEY (для Fernet шифрования эмбеддингов)
 # REQUIRED: S3_ACCESS_KEY
 # REQUIRED: S3_SECRET_KEY
