--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ python-magic==0.4.27
 # Authentication & Security
 PyJWT==2.8.0
 passlib[bcrypt]==1.7.4
-cryptography==42.0.5  # Последняя безопасная версия
+cryptography>=42.0.0,<43.0.0  # Диапазон версий
 
 # Data Validation & Serialization
 email-validator==2.1.0
