Refactor: Rename test files and add session management

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,22 @@ S3_USE_SSL=false
 # S3_USE_SSL=true
 
 # =============================================================================
+# MINIO/S3 НАСТРОЙКИ (PHASE 5)
+# =============================================================================
+# MinIO endpoint (совместим с S3_ENDPOINT_URL)
+MINIO_ENDPOINT=http://localhost:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin123
+MINIO_REGION=us-east-1
+MINIO_BUCKET=face-recognition
+MINIO_SSL=false
+
+# Настройки файлов (Phase 5)
+MAX_FILE_SIZE_MB=10
+UPLOAD_EXPIRATION_DAYS=30
+CLEANUP_INTERVAL_HOURS=24
+
+# =============================================================================
 # ML СЕРВИС
 # =============================================================================
 # URL ML сервиса для распознавания лиц
