--- a/requirements.txt
+++ b/requirements.txt
@@ -60,9 +60,10 @@ orjson==3.9.10
 python-json-logger==2.0.7
 tenacity==8.2.3  # Для retry logic в ML сервисе и внешних API
 
-# Background Tasks
+# Background Tasks & Scheduling
 celery==5.3.4
 dramatiq==1.15.0
+APScheduler==3.10.4
 
 # Metrics & Monitoring
 prometheus-client==0.19.0
@@ -71,13 +72,15 @@ prometheus-client==0.19.0
 chardet==5.2.0
 filetype==1.2.0
 
-# Development Tools (for reference)
-# pytest>=7.4.0
-# pytest-asyncio>=0.21.0
-# black>=23.11.0
-# isort>=5.12.0
-# flake8>=6.1.0
-# mypy>=1.7.0
+# Development & Testing Tools
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+pytest-mock>=3.11.0
+black>=23.11.0
+isort>=5.12.0
+flake8>=6.1.0
+mypy>=1.7.0
 
 # Alembic dependencies
 mako>=1.2.0
