🚀 Complete Face Recognition Service with Full Test Coverage

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,10 @@
 # =============================================================================
 # СИСТЕМНЫЕ ФАЙЛЫ
 # =============================================================================
+# Git (система контроля версий)
+.git
+.gitignore
+
 # macOS
 .DS_Store
 .AppleDouble
