--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,11 @@ python-dotenv==1.0.0
 # Logging & Monitoring
 structlog==23.2.0
 
-# ML & AI (optional, for local development)
+# ML & AI (Face Recognition & Computer Vision)
+torch>=2.0.0
+torchvision>=0.15.0
+facenet-pytorch>=2.5.3
+mtcnn>=0.1.1
 numpy==1.24.4
 scipy==1.11.4
 scikit-learn==1.3.2
@@ -72,15 +76,5 @@ prometheus-client==0.19.0
 chardet==5.2.0
 filetype==1.2.0
 
-# Development & Testing Tools
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-pytest-cov>=4.1.0
-pytest-mock>=3.11.0
-black>=23.11.0
-isort>=5.12.0
-flake8>=6.1.0
-mypy>=1.7.0
-
 # Alembic dependencies
-mako>=1.2.0
+alembic==1.12.1
