--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,47 +2,47 @@
 -r requirements.txt
 
 # Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-httpx==0.25.2
+pytest>=8.0.0
+pytest-asyncio>=0.23.0
+pytest-cov>=4.1.0
+pytest-mock>=3.12.0
+httpx>=0.25.2
 
 # Code Quality
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
-flake8-docstrings==1.7.0
-flake8-import-order==0.18.2
-mypy==1.7.1
-bandit==1.7.5
+black>=24.0.0
+isort>=5.13.0
+flake8>=7.0.0
+flake8-docstrings>=1.7.0
+flake8-import-order>=0.18.2
+mypy>=1.8.0
+bandit>=1.7.6
 
 # Documentation
-mkdocs==1.5.3
-mkdocs-material==9.4.8
-mkdocs-mermaid2-plugin==1.1.1
+mkdocs>=1.5.4
+mkdocs-material>=9.5.0
+mkdocs-mermaid2-plugin>=1.1.1
 
 # Development Server
-watchdog==3.0.0
+watchdog>=3.0.0
 
 # Database Tools
-alembic==1.12.1
+alembic>=1.13.0
 
 # Debugging
-ipdb==0.13.13
-pdbpp==0.10.3
+ipdb>=0.13.13
+pdbpp>=0.10.3
 
 # Profiling
-py-spy==0.3.14
-memory-profiler==0.61.0
+py-spy>=0.3.14
+memory-profiler>=0.61.0
 
 # Jupyter (for data analysis)
-jupyter==1.0.0
-jupyterlab==4.0.9
+jupyter>=1.0.0
+jupyterlab>=4.1.0
 
 # Performance Testing
-locust==2.17.0
+locust>=2.20.0
 
 # Security Scanning
-safety==2.3.5
-pip-audit==2.6.1
+safety>=3.0.0
+pip-audit>=2.6.1
