feat: Add ConfigDict import to webhook.py and commit all changes
- Add ConfigDict import to fix Pydantic v2 syntax error
- Update ARCHITECTURE.md with comprehensive architecture documentation
- Add webhook models, routes, and services
- Add anti-spoofing service for liveness detection
- Add new middleware (metrics, request logging)
- Add ML utilities (face alignment, depth estimation, lighting analysis)
- Update Docker configurations for dev and production
- Update requirements and pyproject.toml
- Add GitHub Actions CI workflow
- Add comprehensive test suite (unit, integration, e2e)
- Add deployment and development documentation

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-в alembic.ini# Face Recognition Service - Пример конфигурации окружения
+# env.example
+# в alembic.ini# Face Recognition Service - Пример конфигурации окружения
 # Скопируйте этот файл в .env и заполните реальными значениями
 
 # =============================================================================
