--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ botocore>=1.34.25
 minio>=7.2.0
 
 # Image Processing
-opencv-python-headless>=4.8.1.78
+opencv-python>=4.8.1.78
 Pillow>=10.1.0
 pillow-heif>=0.18.0
 python-magic>=0.4.27
@@ -57,6 +57,7 @@ mtcnn>=0.1.1
 numpy>=1.26.0
 scipy>=1.11.4
 scikit-learn>=1.3.2
+scikit-image>=0.22.0
 
 # Utilities
 python-multipart>=0.0.6
@@ -76,3 +77,7 @@ psutil>=5.9.6
 # File Processing
 chardet>=5.2.0
 filetype>=1.2.0
+
+
+# изменеия
+decord>=0.6.0
