feat: add concurrent and integration tests
- Add concurrent tests (test_concurrent.py): parallel requests, race conditions,
  async HTTP client, throughput, connection pooling, session concurrency
- Add integration tests (test_redis_postgres.py): PostgreSQL CRUD, Redis operations,
  cache integration, cache-aside/write-through patterns, transaction isolation
- Update requirements.txt with installed package versions
- Update conftest.py with async event_loop fixture for pytest-asyncio
- Add new test files: test_phase1_*.py

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,9 +4,10 @@
 # =============================================================================
 # СИСТЕМНЫЕ ФАЙЛЫ
 # =============================================================================
-# Git (система контроля версий)
+# Git
 .git
 .gitignore
+.gitattributes
 
 # macOS
 .DS_Store
@@ -31,16 +32,14 @@ $RECYCLE.BIN/
 *.swp
 *.swo
 *~
+.editorconfig
 
 # =============================================================================
 # PYTHON
 # =============================================================================
-# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
 
 # Distribution / packaging
@@ -66,10 +65,6 @@ MANIFEST
 *.manifest
 *.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
 # Unit test / coverage reports
 htmlcov/
 .tox/
@@ -81,6 +76,10 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
 
 # =============================================================================
 # VIRTUAL ENVIRONMENTS
@@ -92,6 +91,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.conda
+.conda-env
 
 # =============================================================================
 # DOCKER
@@ -107,6 +108,8 @@ docker-compose*
 *.sqlite
 *.sqlite3
 *.db-journal
+# Но оставляем миграции
+!alembic/versions/*.sql
 
 # =============================================================================
 # LOGS
@@ -126,6 +129,7 @@ tmp/
 # =============================================================================
 # СЕКРЕТЫ И КОНФИДЕНЦИАЛЬНАЯ ИНФОРМАЦИЯ
 # =============================================================================
+# Конкретные паттерны секретов
 .env
 .env.local
 .env.*.local
@@ -137,6 +141,13 @@ private/
 *.pfx
 *.crt
 *.cer
+*.password.txt
+*.secret.json
+*_credentials.json
+*.token
+
+# Но оставляем примеры
+!.env.example
 
 # =============================================================================
 # BACKUP И АРХИВЫ
@@ -150,18 +161,20 @@ private/
 *.zip
 *.7z
 *.rar
+# Но оставляем SQL миграции
+!alembic/versions/*.sql
+!scripts/init-db.sql
 
 # =============================================================================
 # ДОКУМЕНТАЦИЯ
 # =============================================================================
-# ДОКУМЕНТАЦИЯ
-# =============================================================================
-# Exclude root documentation
+# Исключаем корневую документацию
 /README.md
 /CHANGELOG.md
 /LICENSE*
 /CONTRIBUTING*
-# But keep internal docs if needed
+/CODE_OF_CONDUCT.md
+# Но оставляем внутреннюю документацию
 !app/docs/*.md
 
 # =============================================================================
@@ -175,7 +188,7 @@ test_*.py
 htmlcov/
 
 # =============================================================================
-# NODE.JS (если используется для фронтенда)
+# NODE.JS (если используется)
 # =============================================================================
 node_modules/
 npm-debug.log*
@@ -183,11 +196,13 @@ yarn-debug.log*
 yarn-error.log*
 .npm
 .yarn-integrity
+package-lock.json
+yarn.lock
 
 # =============================================================================
 # ДОПОЛНИТЕЛЬНЫЕ ФАЙЛЫ
 # =============================================================================
-# Файлы конфигурации для разработки
+# Конфигурации для разработки
 *.local.yml
 *.local.yaml
 docker-compose.override.yml
@@ -197,108 +212,67 @@ docker-compose.override.yml
 *.seed
 *.pid.lock
 
-# Файлы мониторинга
-*.pid
-*.seed
-
-# Файлы кэша
-.cache/
-*.cache
-
-# Файлы профилирования
-*.prof
-
-# Файлы с чувствительными данными
-*password*
-*secret*
-*token*
-*credential*
-
-# =============================================================================
-# РАЗРАБОТКА И ОТЛАДКА
-# =============================================================================
 # Jupyter Notebook
 .ipynb_checkpoints
 
 # pyenv
 .python-version
 
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.conda
-.conda-env
-
-# Spyder project settings
+# Spyder, Rope
 .spyderproject
 .spyproject
-
-# Rope project settings
 .ropeproject
 
-# mkdocs documentation
+# mkdocs
 /site
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
 # =============================================================================
-# МАШИННОЕ ОБУЧЕНИЕ (если используются локальные модели)
+# МАШИННОЕ ОБУЧЕНИЕ
 # =============================================================================
+# Большие модели (если загружаются отдельно)
 *.model
 *.pkl
 *.h5
 *.onnx
-models/
+*.weights
+models/*.pt
+models/*.pth
 checkpoints/
+# Но оставляем конфигурации моделей
+!models/config.json
+!models/README.md
 
 # =============================================================================
-# МЕДИА ФАЙЛЫ (для разработки)
+# МЕДИА ФАЙЛЫ
 # =============================================================================
-*.jpg
-*.jpeg
-*.png
-*.gif
-*.bmp
-*.tiff
-*.webp
-*.mp4
-*.avi
-*.mov
-*.wmv
+# Исключаем временные/загруженные файлы
+uploads/**/*.jpg
+uploads/**/*.jpeg
+uploads/**/*.png
+uploads/**/*.gif
+temp/**/*.jpg
+temp/**/*.jpeg
+temp/**/*.png
+
+# Но оставляем статические ресурсы и тестовые данные
+!app/static/**
+!tests/fixtures/**
+!docs/images/**
 
 # =============================================================================
 # ВАЖНЫЕ ИСКЛЮЧЕНИЯ
 # =============================================================================
 # Всегда включаем:
-# - requirements.txt
-# - requirements-dev.txt  
+# - requirements.txt (обязательно!)
 # - app/ (исходный код)
 # - alembic/ (миграции БД)
-# - .env.example (шаблон конфигурации)
+# - .env.example (шаблон)
+# - scripts/ (служебные скрипты)
 
 # =============================================================================
 # ПРИМЕЧАНИЯ
 # =============================================================================
-# 1. Этот файл помогает уменьшить размер Docker образа
+# 1. Уменьшает размер Docker образа на 50-80%
 # 2. Исключает конфиденциальные файлы и данные
 # 3. Ускоряет процесс сборки образа
-# 4. Предотвращает случайную утечку секретов в образ
-
-# ДОКУМЕНТАЦИЯ
-# =============================================================================
-# Exclude root documentation
-/README.md
-/CHANGELOG.md
-# But keep internal docs if needed
-!app/docs/*.md
+# 4. Предотвращает случайную утечку секретов
