--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,66 @@
 # Core Framework
-fastapi>=0.125.0
-uvicorn[standard]>=0.38.0
-pydantic>=2.12.0
-pydantic-settings>=2.12.0
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+pydantic>=2.6.0
+pydantic-settings>=2.2.0
 
 # Database
-sqlalchemy[asyncio]>=2.0.45
-asyncpg>=0.31.0
+sqlalchemy[asyncio]>=2.0.25
+asyncpg>=0.29.0
 psycopg2-binary>=2.9.9
-aiosqlite>=0.22.0
+aiosqlite>=0.19.0
 alembic>=1.12.1
 
 # Redis & Cache
-redis>=7.1.0
+redis>=5.0.1
 hiredis>=2.2.3
 
 # HTTP Client & External Services
-httpx>=0.28.1
+httpx>=0.25.2
 aiohttp>=3.9.1
 
 # AWS S3 / Storage
-boto3>=1.42.12
-botocore>=1.42.12
+boto3>=1.34.25
+botocore>=1.34.25
 minio>=7.2.0
 
 # Image Processing
-opencv-python-headless>=4.12.0.88
-Pillow>=10.2.0
+opencv-python>=4.8.1.78
+Pillow>=10.1.0
 pillow-heif>=0.18.0
 python-magic>=0.4.27
 
 # Authentication & Security
-PyJWT>=2.10.1
+PyJWT>=2.8.0
 passlib[bcrypt]>=1.7.4
-cryptography>=46.0.3
+cryptography>=42.0.0
 
 # Data Validation & Serialization
 email-validator>=2.1.0
 marshmallow>=3.20.2
 
 # Date/Time
-python-dateutil>=2.9.0
-pytz>=2024.1
+python-dateutil>=2.8.2
+pytz>=2023.3
 
 # Configuration & Environment
-python-dotenv>=1.2.1
+python-dotenv>=1.0.0
 
 # Logging & Monitoring
-structlog>=24.0.0
+structlog>=23.2.0
 
 # ML & AI (Face Recognition & Computer Vision)
-torch>=2.2.2
-torchvision>=0.17.2
-facenet-pytorch>=2.6.0
+torch>=2.0.0
+torchvision>=0.15.0
+facenet-pytorch>=2.5.3
 mtcnn>=0.1.1
-numpy>=1.26.4
-scipy>=1.16.3
+numpy>=1.26.0
+scipy>=1.11.4
 scikit-learn>=1.3.2
-scikit-image>=0.26.0
+scikit-image>=0.22.0
 
 # Utilities
-python-multipart>=0.0.21
+python-multipart>=0.0.6
 orjson>=3.9.10
 python-json-logger>=2.0.7
 tenacity>=8.2.3
@@ -68,11 +68,11 @@ tenacity>=8.2.3
 # Background Tasks & Scheduling
 celery>=5.3.4
 dramatiq>=1.15.0
-APScheduler>=3.11.1
+APScheduler>=3.10.4
 
 # Metrics & Monitoring
 prometheus-client>=0.19.0
-psutil>=7.1.3
+psutil>=5.9.6
 
 # File Processing
 chardet>=5.2.0
