feat: enhanced face recognition service
- Add batch_generate_embeddings with parallel processing and retry logic
- Add analyze_spoof_signs heuristic method for spoofing detection
- Add verify_face method with decrypted embedding support
- Add face.py models (FaceEmbedding, FaceQualityAssessment, etc.)
- Update reference.py with optional face models import
- Fix routes/verify.py to use new encryption service flow
- Improve validation_service with comprehensive spoof detection
- Update ml_service with production-ready batch processing

--- a/.env.example
+++ b/.env.example
@@ -271,3 +271,65 @@ TEST_REDIS_URL=redis://localhost:6380/1
 # REQUIRED: ENCRYPTION_KEY (для Fernet шифрования эмбеддингов)
 # REQUIRED: S3_ACCESS_KEY
 # REQUIRED: S3_SECRET_KEY
+
+# ============================================================================
+# Anti-Spoofing Configuration (MiniFASNetV2) - Phase 7
+# ============================================================================
+
+# Enable/Disable certified liveness detection with MiniFASNetV2
+# Default: false (для обратной совместимости)
+USE_CERTIFIED_LIVENESS=false
+
+# Path to MiniFASNetV2 model file (.pth)
+# Model will be downloaded automatically if not found (when ANTISPOOFING_AUTO_DOWNLOAD_MODEL=true)
+CERTIFIED_LIVENESS_MODEL_PATH=models/minifasnet_v2.pth
+
+# Classification threshold for real/spoof detection
+# 0.5 = balanced (recommended), >0.5 = stricter (lower FAR, higher FRR)
+# Recommended range: 0.4-0.6
+CERTIFIED_LIVENESS_THRESHOLD=0.5
+
+# Expected model version for validation
+EXPECTED_MODEL_VERSION=v2.0.1
+
+# Input dimensions for MiniFASNetV2 (standard: 80x80)
+ANTISPOOFING_INPUT_WIDTH=80
+ANTISPOOFING_INPUT_HEIGHT=80
+
+# Normalization parameters for MiniFASNetV2
+# Standard: mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5] (normalizes to [-1, 1])
+# Alternative (ImageNet): mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]
+# ANTISPOOFING_NORMALIZE_MEAN=0.5,0.5,0.5
+# ANTISPOOFING_NORMALIZE_STD=0.5,0.5,0.5
+
+# Enable auxiliary spoofing checks (moiré patterns, texture analysis, etc.)
+ANTISPOOFING_ENABLE_AUXILIARY_CHECKS=true
+
+# Target inference times for performance monitoring (seconds)
+ANTISPOOFING_TARGET_INFERENCE_TIME_CPU=0.1   # 100ms on CPU
+ANTISPOOFING_TARGET_INFERENCE_TIME_GPU=0.02  # 20ms on GPU
+
+# Auto-down====================================================================
+# How to enable Anti-Spoofing:
+# ============================================================================
+# 1. Set USE_CERTIFIED_LIVENESS=true
+# 2. Restart the application
+# 3. Model will be downloaded automatically to models/minifasnet_v2.pth
+# 4. Check logs for initialization status
+#
+# Performance expectations:
+# - CPU: ~100ms per inference
+# - GPU: ~20ms per inference
+# - Accuracy: >98% (certified)
+#
+# Troubleshooting:
+# - If model fails to download, set ANTISPOOFING_AUTO_DOWNLOAD_MODEL=false
+# - Manually download from: https://github.com/minivision-ai/Silent-Face-Anti-Spoofing
+# - Place in: models/minifasnet_v2.pth
+# ======================================load model if not found
+ANTISPOOFING_AUTO_DOWNLOAD_MODEL=true
+
+# Model download URL (GitHub release)
+# ANTISPOOFING_MODEL_DOWNLOAD_URL=https://github.com/minivision-ai/Silent-Face-Anti-Spoofing/raw/master/resources/anti_spoof_models/2.7_80x80_MiniFASNetV2.pth
+
+# ==============================================
