--- a/pyproject.toml
+++ b/pyproject.toml
@@ -229,8 +229,7 @@ addopts = [
     "--cov-report=term-missing",
     "--cov-report=html:htmlcov",
     "--cov-report=xml:coverage.xml",
-    "--cov-fail-under=80",
-    "--asyncio-mode=auto"
+    "--cov-fail-under=80"
 ]
 markers = [
     "unit: Unit tests (быстрые тесты без внешних зависимостей)",
@@ -251,7 +250,6 @@ filterwarnings = [
     "ignore::UserWarning:sqlalchemy.*",
     "ignore::RuntimeWarning"
 ]
-asyncio_mode = "auto"
 
 [tool.coverage.run]
 source = ["app"]
