--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,15 @@ env:
   DOCKER_REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
+# Останавливает запущенные ранее задачи при новом пуше в ту же ветку
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   lint:
     name: Lint and Format Check
@@ -29,15 +38,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
       
-      - name: Run black (format check)
-        run: black --check app/ tests/
-      
-      - name: Run isort (import sorting)
-        run: isort --check-only app/ tests/
-      
-      - name: Run flake8
-        run: flake8 app/ tests/ --max-line-length=120 --extend-ignore=E203,W503
-      
+      - name: Run checks (Black, isort, flake8)
+        run: |
+          black --check app/ tests/
+          isort --check-only app/ tests/
+          flake8 app/ tests/ --max-line-length=120 --extend-ignore=E203,W503
+
       - name: Run mypy
         run: mypy app/ --ignore-missing-imports
         continue-on-error: true
@@ -54,28 +60,20 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
 
-      - name: Install dependencies
+      - name: Install security tools
+        run: pip install safety bandit pip-audit
+
+      - name: Security Scans
         run: |
-          python -m pip install --upgrade pip
-          pip install safety bandit pip-audit
-
-      - name: Check dependencies for vulnerabilities
-        run: safety check --json || true
-      
-      - name: Run bandit security scan
-        run: bandit -r app/ -f json -o bandit-report.json || true
-
-      - name: Run pip-audit
-        run: pip-audit -r requirements.txt -r requirements-dev.txt || true
+          bandit -r app/ -f json -o bandit-report.json || true
+          pip-audit -r requirements.txt
 
       - name: Upload security reports
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: security-reports
-          path: |
-            bandit-report.json
-            safety-report.json
+          path: bandit-report.json
 
   test:
     name: Run Tests
@@ -108,23 +106,9 @@ jobs:
         ports:
           - 6379:6379
 
-      minio:
-        image: minio/minio:latest
-        env:
-          MINIO_ROOT_USER: minioadmin
-          MINIO_ROOT_PASSWORD: minioadmin
-        options: >-
-          --health-cmd "curl -f http://localhost:9000/minio/health/live"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 9000:9000
-          - 9001:9001
-
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -133,39 +117,21 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
-
-      - name: Initialize MinIO
-        run: |
-          # Install MinIO Client
-          curl -fsSL https://dl.min.io/client/mc/release/linux-amd64/mc -o /tmp/mc
-          chmod +x /tmp/mc
-          /tmp/mc alias set local http://localhost:9000 minioadmin minioadmin || true
-          /tmp/mc mb local/test-bucket --ignore-existing || true
 
       - name: Run tests
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
           REDIS_URL: redis://localhost:6379/0
-          MINIO_ENDPOINT: localhost:9000
-          MINIO_ACCESS_KEY: minioadmin
-          MINIO_SECRET_KEY: minioadmin
-          MINIO_BUCKET: test-bucket
           ENVIRONMENT: test
-          JWT_SECRET_KEY: test-secret-key-for-ci
-          ENCRYPTION_KEY: test-encryption-key-32-bytes-long!!
-        run: |
-          pytest tests/ -v --cov=app --cov-report=xml --cov-report=term --cov-report=html
+          JWT_SECRET_KEY: test-secret-key
+        run: pytest --cov=app --cov-report=xml --cov-report=term
 
-      - name: Upload coverage to Codecov
+      - name: Upload coverage
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage.xml
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: false
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
@@ -174,106 +140,25 @@ jobs:
           name: test-results-${{ matrix.python-version }}
           path: |
             coverage.xml
-            htmlcov/
             junit.xml
 
-  integration-test:
-    name: Integration Tests
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test_db
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
-      redis:
-        image: redis:7-alpine
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 6379:6379
-
-      minio:
-        image: minio/minio:latest
-        env:
-          MINIO_ROOT_USER: minioadmin
-          MINIO_ROOT_PASSWORD: minioadmin
-        options: >-
-          --health-cmd "curl -f http://localhost:9000/minio/health/live"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 9000:9000
-          - 9001:9001
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pip'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-
-      - name: Initialize MinIO
-        run: |
-          # Install MinIO Client
-          curl -fsSL https://dl.min.io/client/mc/release/linux-amd64/mc -o /tmp/mc
-          chmod +x /tmp/mc
-          /tmp/mc alias set local http://localhost:9000 minioadmin minioadmin || true
-          /tmp/mc mb local/test-bucket --ignore-existing || true
-
-      - name: Run integration tests
-        env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
-          REDIS_URL: redis://localhost:6379/0
-          MINIO_ENDPOINT: localhost:9000
-          MINIO_ACCESS_KEY: minioadmin
-          MINIO_SECRET_KEY: minioadmin
-          MINIO_BUCKET: test-bucket
-          ENVIRONMENT: test
-          JWT_SECRET_KEY: test-secret-key-for-ci
-          ENCRYPTION_KEY: test-encryption-key-32-bytes-long!!
-        run: |
-          pytest tests/integration/ -v
-
   build:
-    name: Build Docker Image
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
     needs: [lint, security, test]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
-        if: false  # Enable if using Docker Hub instead of GHCR
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
@@ -285,50 +170,30 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push Docker image
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
-          cache-to: type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
-          build-args: |
-            BUILDTIME=${{ github.event.head_commit.timestamp }}
-            VERSION=${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/develop'
-    environment:
-      name: staging
-      url: https://staging.example.com
+    runs-on: ubuntu-latest
+    environment: staging
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Deploy to staging
-        run: |
-          echo "Deploying to staging environment..."
-          # Add your deployment commands here
-          # Example: kubectl apply -f k8s/staging/
+      - name: Deploy
+        run: echo "Deploying to staging..."
 
   deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
-    environment:
-      name: production
-      url: https://api.example.com
+    runs-on: ubuntu-latest
+    environment: production
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Deploy to production
-        run: |
-          echo "Deploying to production environment..."
-          # Add your deployment commands here
-          # Example: kubectl apply -f k8s/production/
+      - name: Deploy
+        run: echo "Deploying to production..."
