--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,9 @@ cryptography>=42.0.0
 email-validator>=2.1.0
 marshmallow>=3.20.2
 
+# Compression for biometric storage
+blosc2>=2.0.0
+
 # Date/Time
 python-dateutil>=2.8.2
 pytz>=2023.3
@@ -58,6 +61,19 @@ numpy>=1.26.0
 scipy>=1.11.4
 scikit-learn>=1.3.2
 scikit-image>=0.22.0
+
+# ============================================================================
+# ⭐ NEW: Active Liveness Dependencies
+# ============================================================================
+
+# MediaPipe 
+mediapipe>=0.10.0,<0.11.0
+
+# Video processing
+decord>=0.6.0  # Быстрое извлечение кадров из видео
+av>=10.0.0     # PyAV для работы с видео (альтернатива)
+
+# ============================================================================
 
 # Utilities
 python-multipart>=0.0.6
@@ -83,9 +99,6 @@ certifi>=2025.11.12
 requests>=2.32.5
 urllib3>=2.6.2
 idna>=3.11
-
-# изменеия
-decord>=0.6.0
 
 # Debugging
 colorama>=0.4.6
